DMAプロジェクト土台吸収（Rails8, rspec, rswag, factory_bot）
